experiment hidden field not needed when it's a path-based parameter...

--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -324,7 +324,7 @@ Campaign Stages
       </div>
 
 
-      <input type="hidden" name="experiment" value="{{ data.curr_experiment if data.curr_experiment is defined}}">
+      <!-- <input type="hidden" name="experiment" value="{{ data.curr_experiment if data.curr_experiment is defined}}"> now in url path, not needed -->
       <input type="hidden" name="action" id="ae_definition_action" value="add">
       <input type="hidden" id="ae_experimenter_id" name="experimenter_id" value="{{experimenter_id|default('unknown')}}">
       <input type="hidden" id="ae_campaign_stage_id" name="ae_campaign_stage_id" value="0">
