--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -50,7 +50,7 @@
   <div class="item">
     <div class="header">User Data</div>
     <div class="menu">
-      <a class="item" href="{{pomspath}}/file_uploads/{{session_experiment}}/{{session_role}}/{{session_experimenter}}">
+      <a class="item" href="{{pomspath}}/file_uploads/{{session_experiment}}/{{session_role}}/{{username}}">
         Uploaded Files
       </a>
      </div>
