--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -46,7 +46,10 @@ Uploaded Files
     </div>
   {% else %}
   <h3> Upload a file </h3>
-  <form action="{{pomspath}}/upload_file/{{experiment}}/{{role}}/{{username}}" method="POST" enctype="multipart/form-data">
+  <form action="{{pomspath}}/upload_file" method="POST" enctype="multipart/form-data">
+  <input type=hidden name="experiment" value="{{experiment}}">
+  <input type=hidden name="role" value="{{role}}">
+  <input type=hidden name="username" value="{{username}}">
   Filename: <input type="file" name="filename" multiple />
             <input type="submit" value="Upload" />
             </form>
