--- a/webservice/templates/campaign_stage_submissions.html
+++ b/webservice/templates/campaign_stage_submissions.html
@@ -26,6 +26,14 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
 {%endblock%}
 
 {%block content%}
+<script>
+ function confirm_call(msg, url) {
+         var r = confirm(msg);
+     if ( r ) {
+         location.assign(url)
+     }
+ }
+</script>
 
     <table class="ui sortable celled table">
         <thead>
@@ -49,12 +57,9 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
             {%endif%}
             <td>{{rec.submission_id}}</td>
             <td>
-                {% if rec.jobsub_job_id is not none %}
-                <!--a href="https://fifemon.fnal.gov/monitor/d/000000188/dag-cluster-summary?var-cluster={{rec.jobsub_cluster}}&var-schedd={{rec.jobsub_schedd}}&from={{data.tminsec}}000&to=now&refresh=3m&orgId=1" target='_blank'-->
                 <a href="{{pomspath}}/submission_details/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}" target='_blank'>
                     {{rec.jobsub_job_id}}
                 </a>
-                {% endif %}
             </td>
             <td>
             {% if rec.status in ('New', 'Idle', 'Running', 'Held') %}
@@ -74,7 +79,9 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
                 <i class="ui play icon grey"></i>&nbsp;
                 <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
                 <i class="ui forward icon  grey"></i>&nbsp;
-                <a href="{{pomspath}}/update_submission_status/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}&act=approved" alt="Approved"><i class="ui checkmark icon"></i></a>
+                <a onclick="confirm_call('Are you sure you want to approve ?','{{pomspath}}/update_submission?submission_id={{rec.submission_id}}&jobsub_job_id=&status=Completed&redirect=1')" alt="Approve">
+                <i class="ui checkmark icon blue"></i>
+                </a>
             {% else %}
                 <span>
                 <i class="ui pause icon grey"></i>&nbsp;
@@ -152,5 +159,6 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
     }
 
 </script>
+
 
 {%endblock%}
