--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -78,7 +78,7 @@ Campaigns {%include 'help_button.html'%}
                 <th>id</th>
                 <th>Active</th>
                 <th>Submis-<br>sions<br>Running</th>
-                <th data-sorter="false" data-filter="false">Submission<br>History</th>
+                <th data-sorter="false" data-filter="false">Submis-<br>sion<br>History</th>
                 <th data-sorter="false" data-filter="false">Files<br>Report</th>
                 <th data-sorter="false" data-filter="false">Launch</th>
                 <th data-sorter="false" data-filter="false">Depend-<br>encies</th>
