--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -109,7 +109,7 @@ Campaigns {%include 'help_button.html'%}
                 </td>
                 <td>
                     <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign?campaign_id={{s.campaign_id}}')">
-                        <i class="chart rocket icon"></i>
+                        <i class="chart rocket icon blue"></i>
                     </button>
                 </td>
                 <td>
