--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -115,7 +115,7 @@ Hold Condor Jobs <i class="ui pause icon grey"></i>&nbsp;<br>
 Release Condor Jobs  <i class="ui play icon grey"></i>&nbsp;<br>
 Kill Condor Jobs   <i class="ui trash icon grey"></i>&nbsp;<br>
 Kick to Located
-<a href="{{pomspath}}/force_locate_submission?submission_id={{submission.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+<a href="{{pomspath}}/force_locate_submission?submission_id={{submission.submission_id}}" title="Skip ahead to Located"><i class="ui forward icon"></i></a>
 {%else%}
 Hold Condor Jobs <i class="ui pause icon grey"></i>&nbsp;<br>
 Release Condor Jobs  <i class="ui play icon grey"></i>&nbsp;<br>
