--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -1,6 +1,8 @@
 {%extends "layout.html"%}
 
 {% macro show_hint(anchor, hint) %}
+	{% include 'help_button.html' %}
+
 {% endmacro %}
 
 {%block title%}
@@ -23,7 +25,7 @@ POMS
 
 {%block header%}
 Campaign Stages
-    {% include 'help_button.html' %}
+    {{ show_hint('#Compose-a-campaign-stage', 'Help page') }}
 {%endblock%}
 
 {%block subheader%}
