--- a/webservice/templates/sample_workflows.html
+++ b/webservice/templates/sample_workflows.html
@@ -1,8 +1,13 @@
 {%extends "layout.html"%}
 
+{% macro show_hint(anchor, hint) %}
+  {% include 'help_button.html' %}
+{% endmacro %}
+
 {%block header%}
-Campaign Samples
+  Campaigns Samples{{ show_hint('#Sample-Campaigns', 'Sample Campaigns') }}
 {%endblock%}
+
 
 {%block subheader%}
 &nbsp;
