--- a/webservice/templates/sample_workflows.html
+++ b/webservice/templates/sample_workflows.html
@@ -75,7 +75,7 @@ Campaign Samples
         <div class="ui button deny red">Cancel</div>
         <input type="submit" id="clone" name="clone" value="Clone" class="ui button teal" />
       </div>
-      <input type="hidden" id="from" name="from" value="sample">
+      <input type="hidden" id="from" name="from">
     </form>
   </div>
   <div class="ui hidden divider"></div>
@@ -118,6 +118,7 @@ Campaign Samples
 function clone_template(sample) {
     $("#sample_clone_modal").modal({}).modal('show');
     $("#campaign").val(sample)
+    $("#from").val(sample)
 }
 
 $('#sample_clone_form')
