more doc pointer fixes

--- a/webservice/templates/sample_workflows.html
+++ b/webservice/templates/sample_workflows.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block header%}
-Campaign Samples
+Campaign Samples{%include 'help_button.html'%}
 {%endblock%}
 
 {%block subheader%}
