Made doc link stand out.

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -24,7 +24,7 @@
   <div data-ecl class="item">
     <div class="header">External Links</div>
     <div class="menu">
-        <a class="item" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/POMS_User_Documentation" target="_blank">POMS User Documentation</a>
+        <a class="active teal item" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/POMS_User_Documentation" target="_blank">POMS User Documentation</a>
     </div>
     <div class="menu">
         <a class="item" href="{{exp_obj.snow_url if exp_obj else '#'}}" target="_blank">POMS ServiceNow Page</a>
